--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
        <li>Rohan Gope- Contributed to Hacktoberfest2022</li>
       <li>Samruddhi kulkarni-Contributed to Hacktoberfest2022</li>
       <li>Gaurav Pratap Shrestha-Contributed to Hacktoberfest2022</li>
+      <li>Sujal Timilsina-Contributed to Hacktoberfest2022</li>
     </ul>
 
   </div>
